Clear data for origin if no files found

Currently PluginPrivateDataByOriginChecker only deletes all the data
for the specified origin if it finds at least one file that matches
the time range specified. However, if the origin has no files, it
should be cleaned up as well.

Adds a test that deletes the file for a particular origin before
clearing all PluginPrivate storage to verify it works.

BUG=678314
TEST=new content_unittest passes

Review-Url: https://codereview.chromium.org/2622403002
Cr-Commit-Position: refs/heads/master@{#443320}

Former-commit-id: bd3656df6d9951d33d5ec0373996679fe0bfb571